Bug 1147706 - Warn if we don't use the result of const methods on BaseRect and its subclasses. r=tn